--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "8.11.0",
     "eslint-config-next": "12.1.0",
     "postcss": "^8.4.8",
+    "postcss-import": "^14.0.2",
     "tailwindcss": "^3.0.23",
     "typescript": "4.6.2"
   }
